# edfutils

./: README.md  pyproject.toml  recording_manager.py
edfutils/: __init__.py  _channel.py  _diagnostics.py  _editing.py  _io.py  session.py
eeg_utils/: __init__.py  recording_manager.py  repair_funcs.py
